--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -1402,9 +1402,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 404,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saving train features in ./fbank_outputs_clip_norm\\train folder.Saving train features in ./fbank_outputs_clip_norm\\train folder.\n",
+      "error\n",
+      "error\n",
+      "error\n",
+      "error\n",
+      "error\n",
+      "\n",
+      "error\n",
+      "error\n",
+      "error\n",
+      "errorA célula demorou 8957.082463026047s ou 149.2847077171008 min\n",
+      "\n",
+      "error\n",
+      "error\n",
+      "error\n",
+      "error\n",
+      "error\n",
+      "errorerror\n",
+      "error\n",
+      "\n",
+      "error\n",
+      "error\n",
+      "error\n",
+      "error"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Traceback (most recent call last):Traceback (most recent call last):\n",
+      "  File \"data_preprocess.py\", line 243, in <module>\n",
+      "\n",
+      "  File \"data_preprocess.py\", line 243, in <module>\n",
+      "    main(args.output_directory, config)\n",
+      "  File \"data_preprocess.py\", line 168, in main\n",
+      "    main(args.output_directory, config)\n",
+      "    train_df['mel_dirs'] = mel_dirs\n",
+      "  File \"C:\\Users\\lucas\\Anaconda3\\envs\\m_audio\\lib\\site-packages\\pandas\\core\\frame.py\", line 2938, in __setitem__\n",
+      "  File \"data_preprocess.py\", line 168, in main\n",
+      "    train_df['mel_dirs'] = mel_dirs\n",
+      "    self._set_item(key, value)\n",
+      "  File \"C:\\Users\\lucas\\Anaconda3\\envs\\m_audio\\lib\\site-packages\\pandas\\core\\frame.py\", line 3000, in _set_item\n",
+      "    value = self._sanitize_column(key, value)  File \"C:\\Users\\lucas\\Anaconda3\\envs\\m_audio\\lib\\site-packages\\pandas\\core\\frame.py\", line 2938, in __setitem__\n",
+      "    self._set_item(key, value)\n",
+      "\n",
+      "  File \"C:\\Users\\lucas\\Anaconda3\\envs\\m_audio\\lib\\site-packages\\pandas\\core\\frame.py\", line 3000, in _set_item  File \"C:\\Users\\lucas\\Anaconda3\\envs\\m_audio\\lib\\site-packages\\pandas\\core\\frame.py\", line 3636, in _sanitize_column\n",
+      "    value = sanitize_index(value, self.index, copy=False)\n",
+      "\n",
+      "    value = self._sanitize_column(key, value)\n",
+      "  File \"C:\\Users\\lucas\\Anaconda3\\envs\\m_audio\\lib\\site-packages\\pandas\\core\\frame.py\", line 3636, in _sanitize_column\n",
+      "  File \"C:\\Users\\lucas\\Anaconda3\\envs\\m_audio\\lib\\site-packages\\pandas\\core\\internals\\construction.py\", line 611, in sanitize_index    value = sanitize_index(value, self.index, copy=False)\n",
+      "  File \"C:\\Users\\lucas\\Anaconda3\\envs\\m_audio\\lib\\site-packages\\pandas\\core\\internals\\construction.py\", line 611, in sanitize_index\n",
+      "\n",
+      "    raise ValueError(\"Length of values does not match length of index\")\n",
+      "ValueError: Length of values does not match length of index\n",
+      "    raise ValueError(\"Length of values does not match length of index\")\n",
+      "ValueError: Length of values does not match length of index\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "error\n",
+      "error\n",
+      "error\n",
+      "error\n",
+      "error\n"
+     ]
+    }
+   ],
    "source": [
     "import time\n",
     "\n",
