Adding cpqd auxiliar files

--- a/Mel Normalization debug.ipynb
+++ b/Mel Normalization debug.ipynb
@@ -1381,6 +1381,305 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((14446, 3), (1606, 3))"
+      ]
+     },
+     "execution_count": 102,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train = pd.read_csv('./cpqd_aux/rosana_train.csv', encoding='utf-8')\n",
+    "val = pd.read_csv('./cpqd_aux/rosana_val.csv', encoding='utf-8')\n",
+    "\n",
+    "train.shape, val.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>wav_path</th>\n",
+       "      <th>text</th>\n",
+       "      <th>emb_id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>/l/disk0/data/TTS/vozes_sync/Rosana/9.1/siglas...</td>\n",
+       "      <td>gê dábliu í , ó éssi tê .\\n</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>/l/disk0/data/TTS/vozes_sync/Rosana/9.1/aplica...</td>\n",
+       "      <td>para sua segurança , insira o código do equipa...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>/l/disk0/data/TTS/vozes_sync/Rosana/9.1/nomes/...</td>\n",
+       "      <td>pascoal silvério bruno .\\n</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>/l/disk0/data/TTS/vozes_sync/Rosana/9.1/endere...</td>\n",
+       "      <td>praça nestor urbano canários ,\\n</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>/l/disk0/data/TTS/vozes_sync/Rosana/9.1/generi...</td>\n",
+       "      <td>a quem isso quer dizer ?\\n</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                            wav_path  \\\n",
+       "0  /l/disk0/data/TTS/vozes_sync/Rosana/9.1/siglas...   \n",
+       "1  /l/disk0/data/TTS/vozes_sync/Rosana/9.1/aplica...   \n",
+       "2  /l/disk0/data/TTS/vozes_sync/Rosana/9.1/nomes/...   \n",
+       "3  /l/disk0/data/TTS/vozes_sync/Rosana/9.1/endere...   \n",
+       "4  /l/disk0/data/TTS/vozes_sync/Rosana/9.1/generi...   \n",
+       "\n",
+       "                                                text  emb_id  \n",
+       "0                        gê dábliu í , ó éssi tê .\\n       1  \n",
+       "1  para sua segurança , insira o código do equipa...       1  \n",
+       "2                         pascoal silvério bruno .\\n       1  \n",
+       "3                   praça nestor urbano canários ,\\n       1  \n",
+       "4                         a quem isso quer dizer ?\\n       1  "
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train.wav_path = train.wav_path.str.replace('disk0','disk1').str.replace('/data/', '/awstebas/data/')\n",
+    "val.wav_path = val.wav_path.str.replace('disk0','disk1').str.replace('/data/', '/awstebas/data/')\n",
+    "\n",
+    "train.text = train.text.str.replace('\\n','')\n",
+    "val.text = val.text.str.replace('\\n','')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>wav_path</th>\n",
+       "      <th>text</th>\n",
+       "      <th>emb_id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>/l/disk1/awstebas/awstebas/data/TTS/vozes_sync...</td>\n",
+       "      <td>a um passo da homenagem com a nação alviverde .</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>/l/disk1/awstebas/awstebas/data/TTS/vozes_sync...</td>\n",
+       "      <td>o banco cédula respeita a privacidade de suas ...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>/l/disk1/awstebas/awstebas/data/TTS/vozes_sync...</td>\n",
+       "      <td>servidão saldanha marinho , unidade cento e no...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>/l/disk1/awstebas/awstebas/data/TTS/vozes_sync...</td>\n",
+       "      <td>as informações disponíveis são : meia entrada ...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>/l/disk1/awstebas/awstebas/data/TTS/vozes_sync...</td>\n",
+       "      <td>itacoatiara .</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1601</th>\n",
+       "      <td>/l/disk1/awstebas/awstebas/data/TTS/vozes_sync...</td>\n",
+       "      <td>o limite máximo diário para retirada é de : se...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1602</th>\n",
+       "      <td>/l/disk1/awstebas/awstebas/data/TTS/vozes_sync...</td>\n",
+       "      <td>surgiu , morreu , repetir , antecipar , assegu...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1603</th>\n",
+       "      <td>/l/disk1/awstebas/awstebas/data/TTS/vozes_sync...</td>\n",
+       "      <td>tudo bom ?</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1604</th>\n",
+       "      <td>/l/disk1/awstebas/awstebas/data/TTS/vozes_sync...</td>\n",
+       "      <td>terminar com um quadro de violência doméstica .</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1605</th>\n",
+       "      <td>/l/disk1/awstebas/awstebas/data/TTS/vozes_sync...</td>\n",
+       "      <td>aqui é do banco ixia .</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1606 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                               wav_path  \\\n",
+       "0     /l/disk1/awstebas/awstebas/data/TTS/vozes_sync...   \n",
+       "1     /l/disk1/awstebas/awstebas/data/TTS/vozes_sync...   \n",
+       "2     /l/disk1/awstebas/awstebas/data/TTS/vozes_sync...   \n",
+       "3     /l/disk1/awstebas/awstebas/data/TTS/vozes_sync...   \n",
+       "4     /l/disk1/awstebas/awstebas/data/TTS/vozes_sync...   \n",
+       "...                                                 ...   \n",
+       "1601  /l/disk1/awstebas/awstebas/data/TTS/vozes_sync...   \n",
+       "1602  /l/disk1/awstebas/awstebas/data/TTS/vozes_sync...   \n",
+       "1603  /l/disk1/awstebas/awstebas/data/TTS/vozes_sync...   \n",
+       "1604  /l/disk1/awstebas/awstebas/data/TTS/vozes_sync...   \n",
+       "1605  /l/disk1/awstebas/awstebas/data/TTS/vozes_sync...   \n",
+       "\n",
+       "                                                   text  emb_id  \n",
+       "0       a um passo da homenagem com a nação alviverde .       1  \n",
+       "1     o banco cédula respeita a privacidade de suas ...       1  \n",
+       "2     servidão saldanha marinho , unidade cento e no...       1  \n",
+       "3     as informações disponíveis são : meia entrada ...       1  \n",
+       "4                                         itacoatiara .       1  \n",
+       "...                                                 ...     ...  \n",
+       "1601  o limite máximo diário para retirada é de : se...       1  \n",
+       "1602  surgiu , morreu , repetir , antecipar , assegu...       1  \n",
+       "1603                                         tudo bom ?       1  \n",
+       "1604    terminar com um quadro de violência doméstica .       1  \n",
+       "1605                             aqui é do banco ixia .       1  \n",
+       "\n",
+       "[1606 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 111,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "val"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train.to_csv('./cpqd_aux/rosana_train.csv', index = False)\n",
+    "val.to_csv('./cpqd_aux/rosana_val.csv', index = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'gê dábliu í , ó éssi tê .'"
+      ]
+     },
+     "execution_count": 112,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train.text.values[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
