Adding cpqd auxiliar files

--- a/Mel Normalization debug.ipynb
+++ b/Mel Normalization debug.ipynb
@@ -1381,7 +1381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
@@ -1390,7 +1390,7 @@
        "((14446, 3), (1606, 3))"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 123,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1404,7 +1404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
     {
@@ -1436,32 +1436,32 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>/l/disk0/data/TTS/vozes_sync/Rosana/9.1/siglas...</td>\n",
-       "      <td>gê dábliu í , ó éssi tê .\\n</td>\n",
+       "      <td>/l/disk1/awstebas/awstebas/awstebas/data/TTS/v...</td>\n",
+       "      <td>gê dábliu í , ó éssi tê .</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>/l/disk0/data/TTS/vozes_sync/Rosana/9.1/aplica...</td>\n",
+       "      <td>/l/disk1/awstebas/awstebas/awstebas/data/TTS/v...</td>\n",
        "      <td>para sua segurança , insira o código do equipa...</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>/l/disk0/data/TTS/vozes_sync/Rosana/9.1/nomes/...</td>\n",
-       "      <td>pascoal silvério bruno .\\n</td>\n",
+       "      <td>/l/disk1/awstebas/awstebas/awstebas/data/TTS/v...</td>\n",
+       "      <td>pascoal silvério bruno .</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>/l/disk0/data/TTS/vozes_sync/Rosana/9.1/endere...</td>\n",
-       "      <td>praça nestor urbano canários ,\\n</td>\n",
+       "      <td>/l/disk1/awstebas/awstebas/awstebas/data/TTS/v...</td>\n",
+       "      <td>praça nestor urbano canários ,</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>/l/disk0/data/TTS/vozes_sync/Rosana/9.1/generi...</td>\n",
-       "      <td>a quem isso quer dizer ?\\n</td>\n",
+       "      <td>/l/disk1/awstebas/awstebas/awstebas/data/TTS/v...</td>\n",
+       "      <td>a quem isso quer dizer ?</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -1470,21 +1470,21 @@
       ],
       "text/plain": [
        "                                            wav_path  \\\n",
-       "0  /l/disk0/data/TTS/vozes_sync/Rosana/9.1/siglas...   \n",
-       "1  /l/disk0/data/TTS/vozes_sync/Rosana/9.1/aplica...   \n",
-       "2  /l/disk0/data/TTS/vozes_sync/Rosana/9.1/nomes/...   \n",
-       "3  /l/disk0/data/TTS/vozes_sync/Rosana/9.1/endere...   \n",
-       "4  /l/disk0/data/TTS/vozes_sync/Rosana/9.1/generi...   \n",
+       "0  /l/disk1/awstebas/awstebas/awstebas/data/TTS/v...   \n",
+       "1  /l/disk1/awstebas/awstebas/awstebas/data/TTS/v...   \n",
+       "2  /l/disk1/awstebas/awstebas/awstebas/data/TTS/v...   \n",
+       "3  /l/disk1/awstebas/awstebas/awstebas/data/TTS/v...   \n",
+       "4  /l/disk1/awstebas/awstebas/awstebas/data/TTS/v...   \n",
        "\n",
        "                                                text  emb_id  \n",
-       "0                        gê dábliu í , ó éssi tê .\\n       1  \n",
+       "0                          gê dábliu í , ó éssi tê .       1  \n",
        "1  para sua segurança , insira o código do equipa...       1  \n",
-       "2                         pascoal silvério bruno .\\n       1  \n",
-       "3                   praça nestor urbano canários ,\\n       1  \n",
-       "4                         a quem isso quer dizer ?\\n       1  "
+       "2                           pascoal silvério bruno .       1  \n",
+       "3                     praça nestor urbano canários ,       1  \n",
+       "4                           a quem isso quer dizer ?       1  "
       ]
      },
-     "execution_count": 101,
+     "execution_count": 124,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1495,20 +1495,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train.wav_path = train.wav_path.str.replace('disk0','disk1').str.replace('/data/', '/awstebas/data/')\n",
-    "val.wav_path = val.wav_path.str.replace('disk0','disk1').str.replace('/data/', '/awstebas/data/')\n",
+    "# train.wav_path = train.wav_path.str.replace('disk0','disk1').str.replace('/data/', '/awstebas/data/')\n",
+    "# val.wav_path = val.wav_path.str.replace('disk0','disk1').str.replace('/data/', '/awstebas/data/')\n",
     "\n",
-    "train.text = train.text.str.replace('\\n','')\n",
-    "val.text = val.text.str.replace('\\n','')"
+    "\n",
+    "train.wav_path = train.wav_path.str.replace('/awstebas','').str.replace('/data/', '/awstebas/data/')\n",
+    "val.wav_path = val.wav_path.str.replace('/awstebas','').str.replace('/data/', '/awstebas/data/')\n",
+    "\n",
+    "# train.text = train.text.str.replace('\\n','')\n",
+    "# val.text = val.text.str.replace('\\n','')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [
     {
@@ -1540,31 +1544,31 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>/l/disk1/awstebas/awstebas/data/TTS/vozes_sync...</td>\n",
+       "      <td>/l/disk1/awstebas/data/TTS/vozes_sync/Rosana/9...</td>\n",
        "      <td>a um passo da homenagem com a nação alviverde .</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>/l/disk1/awstebas/awstebas/data/TTS/vozes_sync...</td>\n",
+       "      <td>/l/disk1/awstebas/data/TTS/vozes_sync/Rosana/9...</td>\n",
        "      <td>o banco cédula respeita a privacidade de suas ...</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>/l/disk1/awstebas/awstebas/data/TTS/vozes_sync...</td>\n",
+       "      <td>/l/disk1/awstebas/data/TTS/vozes_sync/Rosana/9...</td>\n",
        "      <td>servidão saldanha marinho , unidade cento e no...</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>/l/disk1/awstebas/awstebas/data/TTS/vozes_sync...</td>\n",
+       "      <td>/l/disk1/awstebas/data/TTS/vozes_sync/Rosana/9...</td>\n",
        "      <td>as informações disponíveis são : meia entrada ...</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>/l/disk1/awstebas/awstebas/data/TTS/vozes_sync...</td>\n",
+       "      <td>/l/disk1/awstebas/data/TTS/vozes_sync/Rosana/9...</td>\n",
        "      <td>itacoatiara .</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
@@ -1576,31 +1580,31 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1601</th>\n",
-       "      <td>/l/disk1/awstebas/awstebas/data/TTS/vozes_sync...</td>\n",
+       "      <td>/l/disk1/awstebas/data/TTS/vozes_sync/Rosana/9...</td>\n",
        "      <td>o limite máximo diário para retirada é de : se...</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1602</th>\n",
-       "      <td>/l/disk1/awstebas/awstebas/data/TTS/vozes_sync...</td>\n",
+       "      <td>/l/disk1/awstebas/data/TTS/vozes_sync/Rosana/9...</td>\n",
        "      <td>surgiu , morreu , repetir , antecipar , assegu...</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1603</th>\n",
-       "      <td>/l/disk1/awstebas/awstebas/data/TTS/vozes_sync...</td>\n",
+       "      <td>/l/disk1/awstebas/data/TTS/vozes_sync/Rosana/9...</td>\n",
        "      <td>tudo bom ?</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1604</th>\n",
-       "      <td>/l/disk1/awstebas/awstebas/data/TTS/vozes_sync...</td>\n",
+       "      <td>/l/disk1/awstebas/data/TTS/vozes_sync/Rosana/9...</td>\n",
        "      <td>terminar com um quadro de violência doméstica .</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1605</th>\n",
-       "      <td>/l/disk1/awstebas/awstebas/data/TTS/vozes_sync...</td>\n",
+       "      <td>/l/disk1/awstebas/data/TTS/vozes_sync/Rosana/9...</td>\n",
        "      <td>aqui é do banco ixia .</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
@@ -1611,17 +1615,17 @@
       ],
       "text/plain": [
        "                                               wav_path  \\\n",
-       "0     /l/disk1/awstebas/awstebas/data/TTS/vozes_sync...   \n",
-       "1     /l/disk1/awstebas/awstebas/data/TTS/vozes_sync...   \n",
-       "2     /l/disk1/awstebas/awstebas/data/TTS/vozes_sync...   \n",
-       "3     /l/disk1/awstebas/awstebas/data/TTS/vozes_sync...   \n",
-       "4     /l/disk1/awstebas/awstebas/data/TTS/vozes_sync...   \n",
+       "0     /l/disk1/awstebas/data/TTS/vozes_sync/Rosana/9...   \n",
+       "1     /l/disk1/awstebas/data/TTS/vozes_sync/Rosana/9...   \n",
+       "2     /l/disk1/awstebas/data/TTS/vozes_sync/Rosana/9...   \n",
+       "3     /l/disk1/awstebas/data/TTS/vozes_sync/Rosana/9...   \n",
+       "4     /l/disk1/awstebas/data/TTS/vozes_sync/Rosana/9...   \n",
        "...                                                 ...   \n",
-       "1601  /l/disk1/awstebas/awstebas/data/TTS/vozes_sync...   \n",
-       "1602  /l/disk1/awstebas/awstebas/data/TTS/vozes_sync...   \n",
-       "1603  /l/disk1/awstebas/awstebas/data/TTS/vozes_sync...   \n",
-       "1604  /l/disk1/awstebas/awstebas/data/TTS/vozes_sync...   \n",
-       "1605  /l/disk1/awstebas/awstebas/data/TTS/vozes_sync...   \n",
+       "1601  /l/disk1/awstebas/data/TTS/vozes_sync/Rosana/9...   \n",
+       "1602  /l/disk1/awstebas/data/TTS/vozes_sync/Rosana/9...   \n",
+       "1603  /l/disk1/awstebas/data/TTS/vozes_sync/Rosana/9...   \n",
+       "1604  /l/disk1/awstebas/data/TTS/vozes_sync/Rosana/9...   \n",
+       "1605  /l/disk1/awstebas/data/TTS/vozes_sync/Rosana/9...   \n",
        "\n",
        "                                                   text  emb_id  \n",
        "0       a um passo da homenagem com a nação alviverde .       1  \n",
@@ -1639,7 +1643,7 @@
        "[1606 rows x 3 columns]"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 128,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1650,7 +1654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1676,6 +1680,35 @@
    ],
    "source": [
     "train.text.values[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from src.text import symbols"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "174"
+      ]
+     },
+     "execution_count": 131,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(symbols)"
    ]
   },
   {
