Adding cpqd auxiliar files

--- a/Mel Normalization debug.ipynb
+++ b/Mel Normalization debug.ipynb
@@ -1381,7 +1381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [
     {
@@ -1390,7 +1390,7 @@
        "((14446, 3), (1606, 3))"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 143,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1404,7 +1404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [
     {
@@ -1436,31 +1436,31 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>/l/disk1/awstebas/awstebas/awstebas/data/TTS/v...</td>\n",
+       "      <td>/l/disk1/awstebas/data/TTS/vozes_sync/Rosana/9...</td>\n",
        "      <td>gê dábliu í , ó éssi tê .</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>/l/disk1/awstebas/awstebas/awstebas/data/TTS/v...</td>\n",
+       "      <td>/l/disk1/awstebas/data/TTS/vozes_sync/Rosana/9...</td>\n",
        "      <td>para sua segurança , insira o código do equipa...</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>/l/disk1/awstebas/awstebas/awstebas/data/TTS/v...</td>\n",
+       "      <td>/l/disk1/awstebas/data/TTS/vozes_sync/Rosana/9...</td>\n",
        "      <td>pascoal silvério bruno .</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>/l/disk1/awstebas/awstebas/awstebas/data/TTS/v...</td>\n",
+       "      <td>/l/disk1/awstebas/data/TTS/vozes_sync/Rosana/9...</td>\n",
        "      <td>praça nestor urbano canários ,</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>/l/disk1/awstebas/awstebas/awstebas/data/TTS/v...</td>\n",
+       "      <td>/l/disk1/awstebas/data/TTS/vozes_sync/Rosana/9...</td>\n",
        "      <td>a quem isso quer dizer ?</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
@@ -1470,11 +1470,11 @@
       ],
       "text/plain": [
        "                                            wav_path  \\\n",
-       "0  /l/disk1/awstebas/awstebas/awstebas/data/TTS/v...   \n",
-       "1  /l/disk1/awstebas/awstebas/awstebas/data/TTS/v...   \n",
-       "2  /l/disk1/awstebas/awstebas/awstebas/data/TTS/v...   \n",
-       "3  /l/disk1/awstebas/awstebas/awstebas/data/TTS/v...   \n",
-       "4  /l/disk1/awstebas/awstebas/awstebas/data/TTS/v...   \n",
+       "0  /l/disk1/awstebas/data/TTS/vozes_sync/Rosana/9...   \n",
+       "1  /l/disk1/awstebas/data/TTS/vozes_sync/Rosana/9...   \n",
+       "2  /l/disk1/awstebas/data/TTS/vozes_sync/Rosana/9...   \n",
+       "3  /l/disk1/awstebas/data/TTS/vozes_sync/Rosana/9...   \n",
+       "4  /l/disk1/awstebas/data/TTS/vozes_sync/Rosana/9...   \n",
        "\n",
        "                                                text  emb_id  \n",
        "0                          gê dábliu í , ó éssi tê .       1  \n",
@@ -1484,7 +1484,7 @@
        "4                           a quem isso quer dizer ?       1  "
       ]
      },
-     "execution_count": 124,
+     "execution_count": 144,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1495,7 +1495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1503,8 +1503,8 @@
     "# val.wav_path = val.wav_path.str.replace('disk0','disk1').str.replace('/data/', '/awstebas/data/')\n",
     "\n",
     "\n",
-    "train.wav_path = train.wav_path.str.replace('/awstebas','').str.replace('/data/', '/awstebas/data/')\n",
-    "val.wav_path = val.wav_path.str.replace('/awstebas','').str.replace('/data/', '/awstebas/data/')\n",
+    "# train.wav_path = train.wav_path.str.replace('/awstebas','').str.replace('/data/', '/awstebas/data/')\n",
+    "# val.wav_path = val.wav_path.str.replace('/awstebas','').str.replace('/data/', '/awstebas/data/')\n",
     "\n",
     "# train.text = train.text.str.replace('\\n','')\n",
     "# val.text = val.text.str.replace('\\n','')"
@@ -1512,7 +1512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [
     {
@@ -1643,7 +1643,7 @@
        "[1606 rows x 3 columns]"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 146,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1658,8 +1658,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train.to_csv('./cpqd_aux/rosana_train.csv', index = False)\n",
-    "val.to_csv('./cpqd_aux/rosana_val.csv', index = False)"
+    "# train.to_csv('./cpqd_aux/rosana_train.csv', index = False)\n",
+    "# val.to_csv('./cpqd_aux/rosana_val.csv', index = False)"
    ]
   },
   {
@@ -1709,6 +1709,172 @@
    ],
    "source": [
     "len(symbols)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((14446, 5), (1606, 5))"
+      ]
+     },
+     "execution_count": 147,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_ = pd.read_csv('./cpqd_aux/train_df_with_mels.csv', encoding='utf-8')\n",
+    "val_ = pd.read_csv('./cpqd_aux/val_df_with_mels.csv', encoding='utf-8')\n",
+    "\n",
+    "train_.shape, val_.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_['text_norm'] = train['text']\n",
+    "val_['text_norm'] = val['text']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>wav_path</th>\n",
+       "      <th>text</th>\n",
+       "      <th>emb_id</th>\n",
+       "      <th>mel_dirs</th>\n",
+       "      <th>durations</th>\n",
+       "      <th>text_norm</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>/l/disk1/awstebas/data/TTS/vozes_sync/Rosana/9...</td>\n",
+       "      <td>gÃª dÃ¡bliu Ã­ , Ã³ Ã©ssi tÃª .</td>\n",
+       "      <td>1</td>\n",
+       "      <td>./fbank_rosana_clipnorm/train/0/siglas0232.npy</td>\n",
+       "      <td>2.37925</td>\n",
+       "      <td>gê dábliu í , ó éssi tê .</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>/l/disk1/awstebas/data/TTS/vozes_sync/Rosana/9...</td>\n",
+       "      <td>para sua seguranÃ§a , insira o cÃ³digo do equi...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>./fbank_rosana_clipnorm/train/0/aplicacao0053.npy</td>\n",
+       "      <td>4.75075</td>\n",
+       "      <td>para sua segurança , insira o código do equipa...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>/l/disk1/awstebas/data/TTS/vozes_sync/Rosana/9...</td>\n",
+       "      <td>pascoal silvÃ©rio bruno .</td>\n",
+       "      <td>1</td>\n",
+       "      <td>./fbank_rosana_clipnorm/train/0/nomes0834.npy</td>\n",
+       "      <td>1.61200</td>\n",
+       "      <td>pascoal silvério bruno .</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>/l/disk1/awstebas/data/TTS/vozes_sync/Rosana/9...</td>\n",
+       "      <td>praÃ§a nestor urbano canÃ¡rios ,</td>\n",
+       "      <td>1</td>\n",
+       "      <td>./fbank_rosana_clipnorm/train/0/enderecos0845.npy</td>\n",
+       "      <td>2.10800</td>\n",
+       "      <td>praça nestor urbano canários ,</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>/l/disk1/awstebas/data/TTS/vozes_sync/Rosana/9...</td>\n",
+       "      <td>a quem isso quer dizer ?</td>\n",
+       "      <td>1</td>\n",
+       "      <td>./fbank_rosana_clipnorm/train/0/genericas0484.npy</td>\n",
+       "      <td>1.30975</td>\n",
+       "      <td>a quem isso quer dizer ?</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                            wav_path  \\\n",
+       "0  /l/disk1/awstebas/data/TTS/vozes_sync/Rosana/9...   \n",
+       "1  /l/disk1/awstebas/data/TTS/vozes_sync/Rosana/9...   \n",
+       "2  /l/disk1/awstebas/data/TTS/vozes_sync/Rosana/9...   \n",
+       "3  /l/disk1/awstebas/data/TTS/vozes_sync/Rosana/9...   \n",
+       "4  /l/disk1/awstebas/data/TTS/vozes_sync/Rosana/9...   \n",
+       "\n",
+       "                                                text  emb_id  \\\n",
+       "0                    gÃª dÃ¡bliu Ã­ , Ã³ Ã©ssi tÃª .       1   \n",
+       "1  para sua seguranÃ§a , insira o cÃ³digo do equi...       1   \n",
+       "2                          pascoal silvÃ©rio bruno .       1   \n",
+       "3                   praÃ§a nestor urbano canÃ¡rios ,       1   \n",
+       "4                           a quem isso quer dizer ?       1   \n",
+       "\n",
+       "                                            mel_dirs  durations  \\\n",
+       "0     ./fbank_rosana_clipnorm/train/0/siglas0232.npy    2.37925   \n",
+       "1  ./fbank_rosana_clipnorm/train/0/aplicacao0053.npy    4.75075   \n",
+       "2      ./fbank_rosana_clipnorm/train/0/nomes0834.npy    1.61200   \n",
+       "3  ./fbank_rosana_clipnorm/train/0/enderecos0845.npy    2.10800   \n",
+       "4  ./fbank_rosana_clipnorm/train/0/genericas0484.npy    1.30975   \n",
+       "\n",
+       "                                           text_norm  \n",
+       "0                          gê dábliu í , ó éssi tê .  \n",
+       "1  para sua segurança , insira o código do equipa...  \n",
+       "2                           pascoal silvério bruno .  \n",
+       "3                     praça nestor urbano canários ,  \n",
+       "4                           a quem isso quer dizer ?  "
+      ]
+     },
+     "execution_count": 149,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_[train_['mel_dirs']!=\"ERROR_LIMITED_SIZE_ABOVE\"][['mel_dirs','text_norm']].to_csv('train.txt', header=None, index = False, sep='|')\n",
+    "val_[val_['mel_dirs']!=\"ERROR_LIMITED_SIZE_ABOVE\"][['mel_dirs','text_norm']].to_csv('val.txt', header=None, index = False, sep='|')"
    ]
   },
   {
