Adding cpqd auxiliar files

--- a/Mel Normalization debug.ipynb
+++ b/Mel Normalization debug.ipynb
@@ -1869,12 +1869,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_[train_['mel_dirs']!=\"ERROR_LIMITED_SIZE_ABOVE\"][['mel_dirs','text_norm']].to_csv('train.txt', header=None, index = False, sep='|')\n",
-    "val_[val_['mel_dirs']!=\"ERROR_LIMITED_SIZE_ABOVE\"][['mel_dirs','text_norm']].to_csv('val.txt', header=None, index = False, sep='|')"
+    "train_[train_['mel_dirs']!=\"ERROR_LIMITED_SIZE_ABOVE\"][['mel_dirs','text_norm']].to_csv('./cpqd_aux/train.txt', header=None, index = False, sep='|', encoding='utf-8')\n",
+    "val_[val_['mel_dirs']!=\"ERROR_LIMITED_SIZE_ABOVE\"][['mel_dirs','text_norm']].to_csv('./cpqd_aux/val.txt', header=None, index = False, sep='|', encoding='utf-8')"
    ]
   },
   {
