Adding cpqd auxiliar files

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -1402,17 +1402,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 405,
+   "execution_count": 417,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saving train features in ./fbank_debug\\train folder.\n",
-      "Training features created. Auxiliar dataframe created in ./vctk_auxA célula demorou 28.20558214187622s ou 0.47009303569793703 min\n",
+      "Saving train features in ./fbank_clip_norm\\train folder.A célula demorou 7932.758882284164s ou 132.2126480380694 min\n",
       "\n",
-      "Saving validation features in ./fbank_debug\\val folder.\n",
+      "Training features created. Auxiliar dataframe created in ./vctk_aux\n",
+      "Saving validation features in ./fbank_clip_norm\\val folder.\n",
       "Validation features created. Auxiliar dataframe created in ./vctk_aux\n"
      ]
     }
@@ -1421,7 +1421,7 @@
     "import time\n",
     "\n",
     "init = time.time()\n",
-    "! python data_preprocess.py --output_directory \"./fbank_debug\" --conf \"./conf/debugger.yaml\"\n",
+    "! python data_preprocess.py --output_directory \"./fbank_clip_norm\" --conf \"./conf/tacotron2_clip_norm.yaml\"\n",
     "end = time.time()\n",
     "\n",
     "print(f\"A célula demorou {end - init}s ou {(end - init)/60} min\")"
@@ -3304,6 +3304,92 @@
    ],
    "source": [
     "output[330]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 410,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from src.audio.audio_processing import mel_denormalize"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 413,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ex1 = np.load('riqueza_fonetica0372.npy')\n",
+    "ex2 = np.load('rf_selecionadas0189.npy')\n",
+    "ex3 = np.load('termos_bancarios0021.npy')\n",
+    "\n",
+    "ex_vctk = np.load('./fbank_outputs/train/250/p229_103.npy')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 414,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "write_hdf5('ex1.h5', \"wave\", list())\n",
+    "write_hdf5('ex1.h5', \"feats\", ex1.astype(np.float32))\n",
+    "\n",
+    "write_hdf5('ex2.h5', \"wave\", list())\n",
+    "write_hdf5('ex2.h5', \"feats\", ex2.astype(np.float32))\n",
+    "\n",
+    "write_hdf5('ex3.h5', \"wave\", list())\n",
+    "write_hdf5('ex3.h5', \"feats\", ex3.astype(np.float32))\n",
+    "\n",
+    "write_hdf5('ex_vctk.h5', \"wave\", list())\n",
+    "write_hdf5('ex_vctk.h5', \"feats\", ex_vctk.astype(np.float32))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 415,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ex1_d = mel_denormalize(ex1)\n",
+    "ex2_d = mel_denormalize(ex2)\n",
+    "ex3_d = mel_denormalize(ex3)\n",
+    "ex_vctk_d = mel_denormalize(ex_vctk)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 416,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "write_hdf5('ex1_dnorm.h5', \"wave\", list())\n",
+    "write_hdf5('ex1_dnorm.h5', \"feats\", ex1_d.astype(np.float32))\n",
+    "\n",
+    "write_hdf5('ex2_dnorm.h5', \"wave\", list())\n",
+    "write_hdf5('ex2_dnorm.h5', \"feats\", ex2_d.astype(np.float32))\n",
+    "\n",
+    "write_hdf5('ex3_dnorm.h5', \"wave\", list())\n",
+    "write_hdf5('ex3_dnorm.h5', \"feats\", ex3_d.astype(np.float32))\n",
+    "\n",
+    "write_hdf5('ex_vctk_dnorm.h5', \"wave\", list())\n",
+    "write_hdf5('ex_vctk_dnorm.h5', \"feats\", ex_vctk_d.astype(np.float32))\n"
    ]
   },
   {
